added requests to pipfile, created utils.py in core, and integrated the Spoonacular api queries

--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -16,7 +16,21 @@
   </p>
 </div>
 
-<p>More stuff. {{ example_context_variable }}.</p>
+<h2>List of Cuisines</h2>
+<p>TODO</p>
+<p>{{ cuisines }}.</p>
+<br />
+<hr>
+<h2>Random Recipe</h2>
+<p>{{ random_recipe }}</p>
+<br />
+<hr>
+<h2>Recipe Summary</h2>
+<p>{{ recipe_summary }}</p>
+<br />
+<hr>
+<h2>Recipe Details</h2>
+<p>{{ recipe_details }}</p>
 
 {% endblock content %}
 
