--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -7,7 +7,19 @@
 
 {% block content %}
 <div class="jumbotron">
-  <h1 class="display-4">My Site</h1>
+  <h1 class="display-4">
+
+<!-- example of pulling specific data from api output -->	
+{% for recipe in random_recipe.results %}
+	{{ recipe.title }}
+	<img src="{{ recipe.image }}">
+
+{% endfor %}
+	<!-- example of pulling specific data from api output -->
+
+
+</h1>
+
   <p class="lead">This is a simple Jumbotron component from Bootstrap 4.</p>
   <hr class="my-4">
   <p>Edit this to include your content.</p>
@@ -18,7 +30,7 @@
 
 <h2>List of Cuisines</h2>
 <p>TODO</p>
-<p>{{ cuisines }}.</p>
+<p>{{ list_of_cuisines }}.</p>
 <br />
 <hr>
 <h2>Random Recipe</h2>
