--- a/apps/core/templates/pages/home.html
+++ b/apps/core/templates/pages/home.html
@@ -29,8 +29,12 @@
 </div>
 
 <h2>List of Cuisines</h2>
-<p>TODO</p>
-<p>{{ list_of_cuisines }}.</p>
+    <form action="." method="GET">
+        {% csrf_token %}
+        {{ list_of_cuisines.as_p }}
+        <button class="btn btn-primary">Get a Recipe!</button>
+    </form>
+<!--<p>{{ list_of_cuisines }}.</p>-->
 <br />
 <hr>
 <h2>Random Recipe</h2>
