--- a/apps/core/templates/pages/index.html
+++ b/apps/core/templates/pages/index.html
@@ -14,14 +14,14 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
     <!-- Themify Icons -->
-    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="static/css/themify-icons.css">
     <!-- Owl carousel -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="static/css/owl.carousel.min.css">
     <!-- Main css -->
-    <link rel='icon' href='images/favicon.ico' type='image/x-icon' sizes="16x16" />
-    <link href="css/style.css" rel="stylesheet">
+    <link rel='icon' href='static/images/favicon.ico' type='static/image/x-icon' sizes="16x16" />
+    <link href="static/css/style.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="img-fluid" alt="logo"></a> 
+                        <a class="navbar-brand" href="index.html"><img src="static/images/logo.png" class="img-fluid" alt="logo"></a> 
 <a href="#" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3"><span class="ti-user">   </span>LOGIN</a>
 
                     </nav>
