--- a/apps/core/templates/pages/index.html
+++ b/apps/core/templates/pages/index.html
@@ -268,12 +268,12 @@
     </footer>
 
     <!-- jQuery and Bootstrap -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="static/js/jquery-3.2.1.min.js"></script>
+    <script src="static/js/bootstrap.bundle.min.js"></script>
     <!-- Plugins JS -->
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="static/js/owl.carousel.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js"></script>
+    <script src="static/js/script.js"></script>
 
 </body>
 
