got index view template working

--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+{% extends "base2.html" %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -83,6 +83,8 @@
 
 
 {% block main %}
+
+
     <div class="container pt-2">
 
       {# Enable Django's "messages" system #}
