recipe page working, updated static references

--- a/apps/core/templates/pages/index.html
+++ b/apps/core/templates/pages/index.html
@@ -1,6 +1,11 @@
 
 {% extends "base2.html" %}
+
+{% load static %}
+{% load bootstrap4 %}
+
 {% block content %}
+
 
 
     <header class="bg-gradient" id="home">
