added a login page that uses the included starter form

--- a/apps/core/templates/accounts_base.html
+++ b/apps/core/templates/accounts_base.html
@@ -42,7 +42,9 @@
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
                         <a class="navbar-brand" href="/"><img src="{% static 'images/logo.png' %}" class="img-fluid" alt="logo"></a> 
-<a href="/account/login2/" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3"><span class="ti-user">   </span>LOGIN</a>
+
+                        <!--
+<a href="account/signup2/" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3"><span class="ti-user">   </span>LOGIN</a> -->
 
                     </nav>
                 </div>
