--- a/apps/core/templates/pages/index.html
+++ b/apps/core/templates/pages/index.html
@@ -155,7 +155,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/iphonex.png" alt="iphone" class="img-fluid">
+                    <img src="{% static 'images/iphonex.png' %}" alt="iphone" class="img-fluid">
                 </div>
 
             </div>
