--- a/apps/accounts/templates/accounts/signup2.html
+++ b/apps/accounts/templates/accounts/signup2.html
@@ -1,5 +1,5 @@
-{% extends "base2.html" %}
-
+{% extends "accounts_base.html" %}
+{% load bootstrap4 %}
 
 {% block content %}
     <header class="bg-gradient" id="home">
@@ -20,19 +20,12 @@
 <article class="card-body mx-auto" style="max-width: 400px;">
     <p>
 
-
- <!-- would be cool to enable SSO with FB, TWitter, etc -->       
-        <a href="" class="btn btn-block btn-twitter"> <span class="ti-twitter-alt"></span>   Login via Twitter</a>
-        <a href="" class="btn btn-block btn-facebook"><span class="ti-facebook"></span></i>   Login via facebook</a>
-    </p>
-    <p class="divider-text">
-        <span class="bg-light">OR</span>
-    </p>
- <!-- END would be cool to enable SSO with FB, TWitter, etc --> 
+    <p class="text-center">Have an account? <a href="/account/login2/">Log In</a> </p>
 
 
 
 <!-- signup form -->
+
     <form>
     <div class="form-group input-group">
         <div class="input-group-prepend">
@@ -68,7 +61,7 @@
     <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
     </div> <!-- form-group// -->      
-    <p class="text-center">Have an account? <a href="">Log In</a> </p>                                                                 
+                                                                 
 </form>
 </article>
 </div> <!-- card.// -->
