--- a/apps/core/templates/base2.html
+++ b/apps/core/templates/base2.html
@@ -1,5 +1,5 @@
 {% load bootstrap4 %}
-{% load static from staticfiles %}
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -16,18 +16,12 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="static/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Themify Icons -->
-    <!-- <link rel="stylesheet" href="static/css/themify-icons.css"> -->
     <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
     <!-- Owl carousel -->
-    <!-- <link rel="stylesheet" href="static/css/owl.carousel.min.css"> -->
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <!-- Main css -->
-    <!-- <link rel='icon' href='static/images/favicon.ico' type='static/image/x-icon' sizes="16x16"/>
-        <link rel='icon' href='static/images/favicon.ico'href="{% static 'css/style.css' %}">
-    <link href="static/css/style.css" rel="stylesheet"> -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link rel='icon' href="{% static 'images/favicon.ico' %}" type='static/image/x-icon' sizes="16x16"/>
 </head>
@@ -110,12 +104,12 @@
     </footer>
 
     <!-- jQuery and Bootstrap -->
-    <script src="static/js/jquery-3.2.1.min.js"></script>
-    <script src="static/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <!-- Plugins JS -->
-    <script src="static/js/owl.carousel.min.js"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <!-- Custom JS -->
-    <script src="static/js/script.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 
 </body>
 
