--- a/apps/core/templates/accounts_base.html
+++ b/apps/core/templates/accounts_base.html
@@ -112,12 +112,12 @@
     </footer>
 
     <!-- jQuery and Bootstrap -->
-    <script src="static/js/jquery-3.2.1.min.js"></script>
-    <script src="static/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <!-- Plugins JS -->
-    <script src="static/js/owl.carousel.min.js"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <!-- Custom JS -->
-    <script src="static/js/script.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 
 </body>
 
