testing using base2 template values inside of base.html

--- a/apps/core/templates/base2.html
+++ b/apps/core/templates/base2.html
@@ -1,12 +1,12 @@
 {% load bootstrap4 %}
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Eat The World - Recipes & More</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Recipes by cuisine and more. Eat the world!">
 
