commenting out favicon line

--- a/apps/core/templates/base2.html
+++ b/apps/core/templates/base2.html
@@ -23,7 +23,9 @@
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <!-- Main css -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link rel='icon' href="{% static 'images/favicon.ico' %}" type='static/image/x-icon' sizes="16x16"/>
+   <!-- there is no favicon right now
+   <link rel='icon' href="{% static 'images/favicon.ico' %}" type='static/image/x-icon' sizes="16x16"/>
+     -->
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
