--- a/apps/core/templates/pages/recipe.html
+++ b/apps/core/templates/pages/recipe.html
@@ -23,7 +23,9 @@
 
 <h2>-- Recipe here --</span></h2>
 
-
+<h4> Recipe "object" (NOTE FOR JSON GO TO /test PAGE)</h4>
+<p>{{ recipe }}</p>
+<br>
 
 <!-- <img src="https://images.media-allrecipes.com/userphotos/560x315/6754461.jpg"> -->
 <img src="{% static 'images/logo.png' %}">
