fixing routing and variable bugs on test page

--- a/apps/core/templates/pages/test.html
+++ b/apps/core/templates/pages/test.html
@@ -30,7 +30,7 @@
 </div>
 
 <h2>List of Cuisines</h2>
-    <form action="test" method="GET">
+    <form action="." method="GET">
         {% csrf_token %}
         {{ list_of_cuisines.as_p }}
         <button class="btn btn-primary">Get a Recipe!</button>
