fit and finish update

--- a/apps/accounts/templates/accounts/login2.html
+++ b/apps/accounts/templates/accounts/login2.html
@@ -15,13 +15,13 @@
     <p>
 
     <p class="text-center">Don't an account? <a href="/account/signup2/">Sign-up</a> </p>
-     <!-- would be cool to enable SSO with FB, TWitter, etc -->       
+     <!-- would be cool to enable SSO with FB, TWitter, etc --> <!--      
         <a href="" class="btn btn-block btn-twitter"> <span class="ti-twitter-alt"></span>   Login via Twitter</a>
         <a href="" class="btn btn-block btn-facebook"><span class="ti-facebook"></span></i>   Login via facebook</a>
     </p>
     <p class="divider-text">
         <span class="bg-light">OR</span>
-    </p>
+    </p> -->
  <!-- END would be cool to enable SSO with FB, TWitter, etc --> 
 {% block form %}
 
