--- a/apps/accounts/templates/accounts/user_account.html
+++ b/apps/accounts/templates/accounts/user_account.html
@@ -1,4 +1,4 @@
-{% extends "base2.html" %}
+{% extends "accounts_base.html" %}
 
 
 {% block content %}
@@ -6,70 +6,44 @@
 
     <header class="bg-gradient" id="home">
         <div class="container">
-            <h1>Account</h1>
-
+            <h1>Welcome, {{ user.username|title }}</h1>
+<a class="btn btn-outline-light my-3 my-sm-0 ml-lg-3" href="/" >Find A Recipe</a>
+<br>
             <br>
         </div>
-
     </header>
-
      <div class="section light-bg" id="features">
-
-
         <div class="container">
-
             <div class="section-title">
                 <small>FAVORITES</small>
                 <h3>Recipes you've saved </h3>
             </div>
 
-
             <div class="row">
+
+<!-- this is where to loop through saved recipes -->
+<!-- for recipe in saved_recipes -->
+
                 <div class="col-12 col-lg-4">
                     <div class="card features">
                         <div class="card-body">
                             <div class="media">
                                 <span class="ti-heart gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
-                                    <h4 class="card-title">Recipe 1</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque </p>
+                                    <h4 class="card-title"> recipe.name </h4>
+                                    <p class="card-text"> recipe.summary? </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
-                    <div class="card features">
-                        <div class="card-body">
-                            <div class="media">
-                                <span class="ti-heart gradient-fill ti-3x mr-3"></span>
-                                <div class="media-body">
-                                    <h4 class="card-title">Recipe 2</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="card features">
-                        <div class="card-body">
-                            <div class="media">
-                                <span class="ti-heart gradient-fill ti-3x mr-3"></span>
-                                <div class="media-body">
-                                    <h4 class="card-title">Recipe 3</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+<!-- end for -->
+
+
+
             </div>
-
         </div>
-
-
-
     </div>
     <!-- // end .section -->
 
