--- a/apps/core/templates/accounts_base.html
+++ b/apps/core/templates/accounts_base.html
@@ -7,6 +7,7 @@
     <title>Eat The World - Recipes & More</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Recipes by cuisine and more. Eat the world!">
 
@@ -16,19 +17,14 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="static/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Themify Icons -->
-    <!-- <link rel="stylesheet" href="static/css/themify-icons.css"> -->
     <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
     <!-- Owl carousel -->
-    <!-- <link rel="stylesheet" href="static/css/owl.carousel.min.css"> -->
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <!-- Main css -->
-    <!-- <link rel='icon' href='static/images/favicon.ico' type='static/image/x-icon' sizes="16x16"/>
-        <link rel='icon' href='static/images/favicon.ico'href="{% static 'css/style.css' %}">
-    <link href="static/css/style.css" rel="stylesheet"> -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/eat-custom.css' %}" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
@@ -41,7 +37,9 @@
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
                         <a class="navbar-brand" href="/"><img src="{% static 'images/logo.png' %}" class="img-fluid" alt="logo"></a> 
-
+{% if request.user.is_authenticated %}
+                        <a class="btn btn-outline-light my-3 my-sm-0 ml-lg-3" href="{% url 'logout' %}" >Sign Out</a>
+{% endif %}
                         <!--
 <a href="account/signup2/" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3"><span class="ti-user">   </span>LOGIN</a> -->
 
@@ -104,11 +102,10 @@
     <footer class="my-5 text-center">
         <!-- Copyright removal is not prohibited! -->
         <p class="mb-2"><small>COPYRIGHT © 2019. ALL RIGHTS RESERVED. EAT THE WORLD</small></p>
-
+<!--
         <small>
             <a href="#" class="m-2">ABOUT</a>
-        </small>
-    </footer>
+        </small> -->
 
     <!-- jQuery and Bootstrap -->
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
