--- a/apps/core/templates/base2.html
+++ b/apps/core/templates/base2.html
@@ -28,6 +28,17 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/eat-custom.css' %}" rel="stylesheet">
 
+    <!-- favicon stuff -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static 'images/safari-pinned-tab.svg' %}" color="#5bbad5">
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="{% static 'images/browserconfig.xml' %}">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
